customize the website

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -280,6 +280,7 @@ footer.fixed-bottom {
     color: var(--global-footer-text-color);
     padding-top: 9px;
     padding-bottom: 8px;
+    text-align: center;
   }
   a {
     color: var(--global-footer-link-color);
@@ -292,9 +293,10 @@ footer.fixed-bottom {
 
 footer.sticky-bottom {
   border-top: 1px solid var(--global-divider-color);
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 9px;
+  padding-bottom: 6px;
   font-size: 0.9rem;
+  text-align: center;
 }
 
 // CV
